realizado a exibição da lista de produtos e o cadastro de novos produtos

--- a/mcfly/src/app/components/template/footer/footer.component.css
+++ b/mcfly/src/app/components/template/footer/footer.component.css
@@ -1,7 +1,9 @@
 .footer {
-  position: fixed;
-  bottom: 0;
   display: flex;
+  position: fixed;
+  z-index: 999;
+  align-self: flex-end;
+  bottom: 0;
   justify-content: flex-end;
 }
 
