--- a/mcfly/src/app/components/template/nav/nav.component.html
+++ b/mcfly/src/app/components/template/nav/nav.component.html
@@ -11,7 +11,7 @@
         <i class="material-icons">home</i>
         Home
       </a>
-      <a mat-list-item routerLink="/products">
+      <a mat-list-item routerLink="/product">
         <i class="material-icons">storefront</i>
         Products
       </a>
